<resources>
    <string name="app_name">Pet Care Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_food">Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_fragment">Food Fragment</string>
    <string name="food_plan">Food Plan</string>
    <string name="food_menu">Food Menu</string>
    <string name="day">Day</string>
    <string name="type">Type</string>
    <string name="weekly_food_plan">Weekly Food Plan</string>
    <string name="food_image_description">description\n</string>
    <string name="meal_type">Meal Type</string>
    <string name="food_items">Food Items</string>
    <string name="add_food_item">add food item\n</string>
    <string name="add_food_plan">Add Food Plan</string>
    <string name="select_the_day">Select the day</string>
    <string name="select_the_type">Select the type</string>
    <string name="select_the_meal">Select the meal</string>
    <string name="delete">delete\n</string>
    <string name="chat">chatbot</string>
    <string-array name="food_type_options">
        <item>All</item>
        <item>Product</item>
        <item>Recipe</item>
    </string-array>

</resources>