<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />


        <item
            android:id="@+id/nav_update"
            android:icon="@mipmap/usericon_foreground"
            android:title="Update Info" />

        <item
            android:id="@+id/nav_vet"
            android:icon="@mipmap/usericon_foreground"
            android:title="Vet Map" />

        <item
            android:id="@+id/nav_fragment"
            android:icon="@mipmap/usericon_foreground"
            android:title="Vet List" />
        <item
            android:id="@+id/nav_admin_item"
            android:icon="@drawable/admin"
            android:title="Admin Dashboard"
            android:visible="false" />




        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/pilon"
            android:title="@string/menu_food" />
        <item
            android:id="@+id/nav_service_fares"
            android:icon="@drawable/livraison2"
            android:title="Service" />
        <item
            android:id="@+id/nav_animal"
            android:icon="@drawable/animal"
            android:title="Animal" />

    </group>

    <!-- Logout Item at the Bottom -->

</menu>
