<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mobile.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mobile.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.mobile.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.example.mobile.ui.signup.SignupFragment"
        android:label="Login"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/nav_update"
        android:name="com.example.mobile.ui.update.UserInfoModificationFragment"
        android:label="Update"
        tools:layout="@layout/fragment_user_info_modification" />
    <fragment
        android:id="@+id/nav_vet"
        android:name="com.example.mobile.ui.vet_map.VetMapFragment"
        android:label="Veterinarian map"
        tools:layout="@layout/fragment_vet_map" />

    <fragment
        android:id="@+id/nav_fragment"
        android:name="com.example.mobile.ui.vet_list.VetListFragment"
        android:label="Veterinarians list"
        tools:layout="@layout/fragment_vet_list" />

    <fragment
        android:id="@+id/nav_admin_item"
        android:name="com.example.mobile.ui.admin.AdminDashboardPlaceholderFragment"
        android:label="Admin Dashboard"
        tools:layout="@layout/fragment_placeholder" />


    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.mobile.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food">

        <!-- Define navigation actions from FoodFragment to each target fragment -->
        <action
            android:id="@+id/action_foodFragment_to_foodPlanFragment"
            app:destination="@id/foodPlanFragment" />

        <action
            android:id="@+id/action_foodFragment_to_foodProductFragment"
            app:destination="@id/foodProductFragment" />

        <action
            android:id="@+id/action_foodFragment_to_chatFragment"
            app:destination="@id/chatFragment" />

    </fragment>

    <fragment
        android:id="@+id/foodPlanFragment"
        android:name="com.example.mobile.ui.food.Plan.List.ListPlanFragment"
        android:label="Food Plan"
        tools:layout="@layout/fragment_listplan" >
        <action
            android:id="@+id/action_listPlanFragment_to_addPlanFragment"
            app:destination="@id/addPlanFragment" />
    </fragment>

    <fragment
        android:id="@+id/foodProductFragment"
        android:name="com.example.mobile.ui.food.Product.List.ListProductFragment"
        android:label="Food Product"
        tools:layout="@layout/fragment_listproduct" >
        <action
            android:id="@+id/action_listProductFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPlanFragment"
        android:name="com.example.mobile.ui.food.Plan.Add.AddPlanFragment"
        android:label="Add Plan">
        <action
            android:id="@+id/action_addPlanFragment_to_listPlanFragment"
            app:destination="@id/foodPlanFragment"
            app:popUpTo="@id/nav_host_fragment_content_main"
            app:popUpToInclusive="true"
            />
    </fragment>

    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.mobile.ui.food.Product.add.AddProductFragment"
        android:label="Add Product">
        <action
            android:id="@+id/action_addProductFragment_to_listProductFragment"
            app:destination="@id/foodProductFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.mobile.ui.food.chatbot.ChatFragment"
        android:label="Chat" />

    <fragment
        android:id="@+id/nav_service_fares"
        android:name="com.example.mobile.ui.service.serviceAddFragment"
        android:label="Service"
        tools:layout="@layout/fragment_serviceadd">
        <action
            android:id="@+id/action_nav_service_fares_to_nav_ajoutService"
            app:destination="@id/nav_ajoutService" />
        <!-- Add navigation to serviceaffichageFragment -->
        <action
            android:id="@+id/action_nav_service_fares_to_serviceaffichageFragment"
            app:destination="@id/ServiceaffichageFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_ajoutService"
        android:name="com.example.mobile.ui.service.Ajout.serviceajoutFragment"
        android:label="Add Service"
        tools:layout="@layout/fragment_serviceajout" />

    <!-- Add the serviceaffichageFragment definition -->
    <fragment
        android:id="@+id/ServiceaffichageFragment"
        android:name="com.example.mobile.ui.service.affichage.ServiceaffichageFragment"
        android:label="Service Display"
        tools:layout="@layout/fragment_serviceaffichage" />
    <!-- Animal Home Fragment (Navigation Drawer) -->
    <fragment
        android:id="@+id/nav_animal"
        android:name="com.example.mobile.ui.animal.AnimalHomeFragment"
        android:label="Animal"
        tools:layout="@layout/fragment_animal_home">

        <!-- Action to navigate to Add Animal Fragment -->
        <action
            android:id="@+id/action_animalHomeFragment_to_animalFragment"
            app:destination="@id/animalFragment" />

        <!-- Action to navigate to Animal List Fragment -->
        <action
            android:id="@+id/action_animalHomeFragment_to_animalListFragment"
            app:destination="@id/animalListFragment" />

        <!-- Action to navigate to Animal Reminder Fragment -->
        <action
            android:id="@+id/action_animalHomeFragment_to_animalReminderFragment"
            app:destination="@id/animalReminderFragment" />
    </fragment>

    <!-- Animal Fragment -->
    <fragment
        android:id="@+id/animalFragment"
        android:name="com.example.mobile.ui.animal.AnimalFragment"
        android:label="Animal"
        tools:layout="@layout/fragment_animal">
        <action
            android:id="@+id/action_animalFragment_to_animalListFragment"
            app:destination="@id/animalListFragment" />
    </fragment>

    <!-- Animal List Fragment -->
    <fragment
        android:id="@+id/animalListFragment"
        android:name="com.example.mobile.ui.animal.AnimalListFragment"
        android:label="Animal List"
        tools:layout="@layout/fragment_animal_list">
        <action
            android:id="@+id/action_animalListFragment_to_animalEditFragment"
            app:destination="@id/animalEditFragment" />
        <action
            android:id="@+id/action_animalListFragment_to_animalDetailsFragment"
            app:destination="@id/animalDetailsFragment" />
    </fragment>

    <!-- Animal Edit Fragment -->
    <fragment
        android:id="@+id/animalEditFragment"
        android:name="com.example.mobile.ui.animal.AnimalEditFragment"
        android:label="Edit Animal"
        tools:layout="@layout/fragment_animal_edit">
        <action
            android:id="@+id/action_animalEditFragment_to_animalListFragment"
            app:destination="@id/animalListFragment" />
    </fragment>

    <!-- Animal Details Fragment -->
    <fragment
        android:id="@+id/animalDetailsFragment"
        android:name="com.example.mobile.ui.animal.AnimalDetailsFragment"
        android:label="Animal Details"
        tools:layout="@layout/fragment_animal_details" />

    <!-- Animal Reminder Fragment -->
    <fragment
        android:id="@+id/animalReminderFragment"
        android:name="com.example.mobile.ui.animal.AnimalReminderFragment"
        android:label="Animal Reminder"
        tools:layout="@layout/fragment_reminder" />

</navigation>
